# Maxform

./: .gitignore  README.md
scripts/: AEexposeTmTemplate.mel  AEikChainControlTemplate.mel  AEikControl.mel  AEikControlTemplate.mel  AElookAtConstraintTemplate.mel  AEmaxformTemplate.mel  AEorientationConstraintTemplate.mel  AEpathConstraintTemplate.mel  AEpositionConstraintTemplate.mel  AEpositionListTemplate.mel  AEprsTemplate.mel  AErotationListTemplate.mel  AEscaleListTemplate.mel  AEsplineIKChainControlTemplate.mel  AEspringPositionTemplate.mel
src/: AttachmentConstraint.cpp  AttachmentConstraint.h  CMakeLists.txt  ExposeTransform.cpp  ExposeTransform.h  IKChainControl.cpp  IKChainControl.h  IKControl.cpp  IKControl.h  LookAtConstraint.cpp  LookAtConstraint.h  Matrix3.cpp  Matrix3.h  Matrix3Controller.cpp  Matrix3Controller.h  Maxform.cpp  Maxform.h  Maxformations.cpp  Maxformations.h  OrientationConstraint.cpp  OrientationConstraint.h  PRS.cpp  PRS.h  PRSNode.cpp  PRSNode.h  PathConstraint.cpp  PathConstraint.h  PositionConstraint.cpp  PositionConstraint.h  PositionController.cpp  PositionController.h  PositionList.cpp  PositionList.h  PositionListNode.cpp  PositionListNode.h  RotationController.cpp  RotationController.h  RotationList.cpp  RotationList.h  RotationListNode.cpp  (+12 more)
